Implement opacity button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     </head>
 
     <body>
-        <button>Create New Sketchpad</button>
+        <button class="sketchpad-btn">Create New Sketchpad</button>
+        <div class="btn-container">
+            <button class="opacity-btn">Opacity: OFF</button>
+            <button class="rainbow-btn">Rainbow: OFF</button>
+        </div>
         <div class="container"></div>
     </body>
 
